# CloudProcessing

cat_cloud_processing/: CMakeLists.txt  CMakeLists.txt~  package.xml
cat_cloud_processing/src/: HERB_tableDetection.cpp  HERB_tableDetection.cpp~  READMe_convertionToHerb.txt  cloudProc.cpp  extract_cylinder.cpp  extract_tests.cpp  extract_tests.cpp~  storeCloud.cpp  storeCloud.cpp~
cat_common/: CMakeLists.txt  package.xml
cat_common/include/cat_common/: PosOriRepresentation.hpp  cloud_common.h  cloud_common.h~  robot_common.hpp
cat_common/src/: .cpp  PosOriRepresentation.cpp  cloud_common.cpp  cloud_common.cpp~
