<?xml version="1.0"?>
<package>
  <name>cat_cloud_processing</name>
  <version>0.0.0</version>
  <description>The cloud_processing package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cat@todo.todo">cat</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


 <buildtool_depend>catkin</buildtool_depend>

<build_depend> cat_common </build_depend>
<run_depend> cat_common </run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
